--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: php
 
+sudo: required
+
 php:
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -9,9 +10,9 @@ php:
 
 matrix:
   allow_failures:
-    - php:
-        - 7.1
-        - hhvm
+    - php: 7.1
+    - php: hhvm
+  fast_finish: true
 
 before_install:
   - travis_retry composer self-update
