--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ php:
 - 5.6
 - 7.0
 - 7.1
+- nightly
 - hhvm
 matrix:
   allow_failures:
-  - php: 7.1
+  - php: nightly
   - php: hhvm
   fast_finish: true
 before_install:
