--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,16 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
   - hhvm
+  - nightly
 
 matrix:
   allow_failures:
     - php:
-        - 7.1
+        - 7.2
         - hhvm
+        - nightly
 
 before_install:
   - travis_retry composer self-update
