--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: php
 dist: trusty
 
 php:
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -13,10 +12,10 @@ php:
 
 matrix:
   allow_failures:
-    - php:
-        - 7.2
-        - hhvm
-        - nightly
+    - php: 7.2
+    - php: hhvm
+    - php: nightly
+  fast_finish: true
 
 before_install:
   - travis_retry composer self-update
