--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5",
+        "phpunit/phpunit": "~6.0",
         "friendsofphp/php-cs-fixer": "~2.0"
     },
     "autoload": {
