Simplified file layout.

--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Trafficgate\\": "src/"
+            "Trafficgate\\Shell\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Trafficgate\\": "tests/"
+            "Trafficgate\\Shell\\": "tests/"
         }
     },
     "extra": {
