--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": "^7.0.0",
         "symfony/process": "~3.0|~4.0",
         "psr/log": "^1.0"
     },
