--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         }
     ],
     "require": {
-        "php": "^7.0.0",
-        "symfony/process": "~3.0|~4.0",
-        "psr/log": "^1.0"
+        "php": ">=7.1.3",
+        "psr/log": "^1.0",
+        "symfony/process": "~3.0|~4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "friendsofphp/php-cs-fixer": "~2.0"
+        "friendsofphp/php-cs-fixer": "~2.0",
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
         "psr-4": {
