--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=7.1.3",
         "psr/log": "^1.0",
-        "symfony/process": "~3.0|~4.0"
+        "symfony/process": "~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0",
