--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0",
-        "phpunit/phpunit": "~7.5|~8.0"
+        "phpunit/phpunit": "~7.5|~8.0|~9.0"
     },
     "autoload": {
         "psr-4": {
