--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest]
-                php: [7.1, 7.2, 7.3, 7.4, 8.0]
+                php: [7.1, 7.2, 7.3, 7.4]
                 dependency-version: [prefer-lowest, prefer-stable]
 
         name: P${{ matrix.php }} - ${{ matrix.dependency-version }}
@@ -18,16 +18,16 @@ jobs:
             -   name: Checkout code
                 uses: actions/checkout@v2
 
-            -   name: Install SQLite 3
+            -   name: Install ping
                 run: |
                     sudo apt-get update
-                    sudo apt-get install sqlite3
+                    sudo apt-get install iputils-ping
 
             -   name: Setup PHP
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
-                    extensions: curl, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, iconv
+                    extensions: zip
                     coverage: none
 
             -   name: Install dependencies
