--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "symfony/process": "~3.3|~4.0",
+        "php": "^7.1|^8.0",
+        "symfony/process": "~3.3|~4.0|~5.0",
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "friendsofphp/php-cs-fixer": "~2.0"
+        "phpunit/phpunit": "~6.0|~7.0|~8.0|~9.0",
+        "friendsofphp/php-cs-fixer": "~3.0"
     },
     "autoload": {
         "psr-4": {
